<resources>
    <string name="app_name">AgendaEstudiantil</string>
    <string name="bienvenida">¡Bienvenido!</string>
    <string name="iniciar">Crear agenda</string>
    <string name="nombreAgenda">Nombre de la agenda</string>
    <string name="crear">Crear</string>
    <string name="agenda">Agenda</string>
    <string name="calendario">Calendario</string>
    <string name="horario">Horario</string>
    <string name="notas">Notas</string>
    <string name="materias">Materias</string>
    <string name="profesores">Profesores</string>
    <string name="title_activity_agenda">AgendaActivity</string>
    <string name="tarea">Tarea</string>
    <string name="examen">Examen</string>
    <string name="recordatorio">Recordatorio</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Opciones</string>

    <string name="agregar_profesores">Agregar profesor</string>
    <string name="ver_profesor">Detalle profesor</string>
    <string name="editar_profesor">Editar profesor</string>
    <string name="datos">Datos</string>
    <string name="nombre_hint">Nombre del profesor</string>
    <string name="apellido_hint">Apellido del profesor</string>
    <string name="telefono">Telefono</string>
    <string name="correo">Correo</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_detalle_profesor">DetalleProfesorActivity</string>
    <string name="large_text"></string>

    <string name="periodo">Periodo</string>
    <string name="agregar_periodo">Agregar periodo</string>
    <string name="periodo_hint">Titulo del periodo</string>
    <string name="inicio_hint">Inicio del periodo</string>
    <string name="fin_hint">Fin del periodo</string>
    <string name="editar">Editar</string>
    <string name="eliminar">eliminar</string>
    <string name="cancelar">cancelar</string>

    <string name="materia">Materia</string>
    <string name="materia_hint">Nombre de la materia</string>
    <string name="aula_hint">Aula de la materia</string>
    <string name="profesor_hint">Profesor de la materia</string>
    <string name="agregar_materia">Agregar materia</string>

    <string-array name="my_header_title">
        <item></item>
        <item>L</item>
        <item>M</item>
        <item>M</item>
        <item>J</item>
        <item>V</item>
        <item>S</item>
        <item>D</item>
    </string-array>

    <string name="editar_clase">Editar clase</string>
    <string name="agregar_clase">Agregar clase</string>
    <string name="aula_clase_hint">Aula de la clase</string>
    <string name="dia_clase">Dia de la clase</string>
    <string name="hora_inicio">Inicio de la clase</string>
    <string name="hora_fin">Fin de la clase</string>
    <string name="descripcion_clase">Descripcion</string>
    <string name="atras"><![CDATA[<-]]></string>
    <string name="adelante"><![CDATA[->]]></string>
    <string name="mes_año">Mayo 2022</string>

    <string name="domingo">D</string>
    <string name="lunes">L</string>
    <string name="martes">Ma</string>
    <string name="miercoles">Mie</string>
    <string name="jueves">J</string>
    <string name="viernes">V</string>
    <string name="sabado">S</string>
    <string name="cellDayText">1</string>
    <string name="calendario_semanal">Semanal</string>

    <string name="agregar_examen">Agregar examen</string>
    <string name="fecha_examen">Fecha examen</string>
    <string name="aula">Aula</string>
    <string name="descripcion_examen">Descripcion examen</string>
    <string name="hora_del_examen">Hora del examen</string>
    <string name="editar_examen">Editar examen</string>
    <string name="hora_de_entrega">Hora de entrega</string>
    <string name="titulo_de_la_tarea">Titulo de la tarea</string>
    <string name="descripcion_de_la_tarea">Descripcion de la tarea</string>
    <string name="fecha_de_la_tarea">Fecha de la tarea</string>


    <string name="agregar_tarea">Agregar tarea</string>
    <string name="editar_tarea">Editar tarea</string>
    <string name="hora_del_recordatorio">Hora del recordatorio</string>
    <string name="descripcion_de_recordatorio">Descripcion de recordatorio</string>
    <string name="fecha_del_recordatorio">Fecha del recordatorio</string>
    <string name="agregar_recordatorio">Agregar recordatorio</string>
    <string name="editar_recordatorio">Editar recordatorio</string>

    <string-array name="agenda_fechas">
        <item>Ayer</item>
        <item>Hoy</item>
        <item>Mañana</item>
        <item>Proximos 7 dias</item>
        <item>Este mes</item>
        <item>Siguiente mes</item>
        <item>Todo</item>
    </string-array>

    <string name="agregar_nota_examen">Agregar nota de examen</string>
    <string name="ver_notas">Notas</string>

    <string name="graficos">Graficos</string>
    <string name="logout">Salir</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="enviar_correo">Enviar correo</string>
    <string name="asunto">Asunto</string>
    <string name="mensaje">Mensaje</string>
    <string name="correo_a_enviar">Correo</string>}
    <string name="ver_pdf">Ver eventos diarios</string>
    <string name="llenar_base_de_datos">Llenar base de datos</string>
</resources>