<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio">

    <Button
        android:id="@+id/btnProfesor"
        android:layout_width="156dp"
        android:layout_height="140dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:text="@string/profesores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNota"
        app:layout_constraintVertical_bias="0.189" />

    <Button
        android:id="@+id/btnMateria"
        android:layout_width="156dp"
        android:layout_height="140dp"
        android:layout_marginTop="48dp"
        android:text="@string/materias"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnProfesor"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHorario"
        app:layout_constraintVertical_bias="0.188" />

    <Button
        android:id="@+id/btnHorario"
        android:layout_width="156dp"
        android:layout_height="140dp"
        android:layout_marginTop="64dp"
        android:text="@string/horario"
        app:layout_constraintEnd_toStartOf="@+id/btnNota"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAgenda" />

    <Button
        android:id="@+id/btnAgenda"
        android:layout_width="156dp"
        android:layout_height="140dp"
        android:layout_marginTop="88dp"
        android:text="@string/agenda"
        app:layout_constraintEnd_toStartOf="@+id/btnCalendario"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCalendario"
        android:layout_width="156dp"
        android:layout_height="140dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="32dp"
        android:text="@string/calendario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNota"
        android:layout_width="156dp"
        android:layout_height="140dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:text="@string/notas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalendario" />

</androidx.constraintlayout.widget.ConstraintLayout>