<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lblTituloPeriodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/periodo_hint"/>

    <EditText
        android:id="@+id/txtTituloPeriodoVIew"
        android:layout_below="@id/lblTituloPeriodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/periodo"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/lblInicioPeriodo"
        android:layout_below="@id/txtTituloPeriodoVIew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="0dp"
        android:text="@string/inicio_hint" />

    <EditText
        android:id="@+id/txtInicioPeriodoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblInicioPeriodo"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/inicio_hint"
        android:inputType="date"
        android:maxLines="1"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txtFinPeriodoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblFinPeriodo"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/fin_hint"
        android:inputType="date"
        android:maxLines="1"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/lblFinPeriodo"
        android:layout_below="@id/txtInicioPeriodoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="0dp"
        android:text="@string/fin_hint" />

    <Button
        android:id="@+id/btnEditarPeriodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtFinPeriodoView"
        android:text="@string/editar"/>

    <Button
        android:id="@+id/btnEliminarPeriodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtFinPeriodoView"
        android:layout_toRightOf="@id/btnEditarPeriodo"
        android:text="@string/eliminar" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtFinPeriodoView"
        android:layout_toRightOf="@id/btnEliminarPeriodo"
        android:text="@string/cancelar" />
</RelativeLayout>