<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lblNombreMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/materia_hint"/>

    <EditText
        android:id="@+id/txtNombreMateriaView"
        android:layout_below="@id/lblNombreMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/materia_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/lblAulaMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNombreMateriaView"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="0dp"
        android:text="@string/aula_hint" />

    <EditText
        android:id="@+id/txtAulaMateriaView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblAulaMateria"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/aula_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/lblProfesorMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtAulaMateriaView"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="0dp"
        android:text="@string/profesor_hint" />

    <Spinner
        android:id="@+id/spProfesorMateriaView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblProfesorMateria"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/lblPeriodoMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spProfesorMateriaView"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="0dp"
        android:text="@string/periodo" />

    <Spinner
        android:id="@+id/spPeriodoMateriaView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblPeriodoMateria"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnEditarMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spPeriodoMateriaView"
        android:text="@string/editar"/>

    <Button
        android:id="@+id/btnEliminarMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spPeriodoMateriaView"
        android:layout_toRightOf="@id/btnEditarMateria"
        android:text="@string/eliminar" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spPeriodoMateriaView"
        android:layout_toRightOf="@id/btnEliminarMateria"
        android:text="@string/cancelar" />
</RelativeLayout>